de/0.10.0/manual/_sources/config/widgets/index.txt
.. replaces:: CometVisu/0.8.x/widgets/de

.. _widgets:

.. rubric:: Widgets in der CometVisu

Widgets sind die einzelnen Elemente aus denen eine CometVisu-Site
zusammengebaut wird. Diese können entweder fest in der CometVisu
eingebaut sein oder per Plugin-Schnittstelle integriert werden. Die
Widgets lassen sich durch den Editor hinzufügen. (Rechtklick auf das
Element, welches ein Widget aufnehmen soll z.B. eine Page oder eine
Gruppe (group). Durch Auswahl des Widget aus dem Drop-Down Menü und
anschließendem Klick auf das + - Zeichen ist das Widget eingefügt und
kann wie folgt konfiguriert werden;


Bedienbare Widgets
==================

Diese Widgets können in irgendeiner Weise bedient werden um so Daten an das Backend zu senden oder andere
Aktionen auszulösen, z.B. kann man mit einem Switch durch anklicken einen Lampe schalten, oder mit einem Pagejump
kann innerhalb der Visu navigiert werden.

+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Widget                                          | Beschreibung                                                                                                                                                                                                                                                                                                                                                                |
+=================================================+=============================================================================================================================================================================================================================================================================================================================================================================+
| :doc:`Audio <audio/index>`                      | Mit diesem Widget kann in die Visu eine Audio-Datei eingebunden werden, die sich über eine Adresse abspielen lässt.                                                                                                                                                                                                                                                         |
+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Designtoggle <designtoggle/index>`        | Fügt der Visu eine Schaltfläche hinzu, mit der das Design gewechselt werden kann.                                                                                                                                                                                                                                                                                           |
+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`ImageTrigger <imagetrigger/index>`        | Fügt der Visu ein klickbares Bild hinzu. Dies kann z.B. für Erinnerungen wie Geburtstage oder Müllabfuhr verwendet werden.                                                                                                                                                                                                                                                  |
+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`InfoAction <infoaction/index>`            | Ermöglich die Kombination eines darstellenden und bedienbaren Widgets.                                                                                                                                                                                                                                                                                                      |
+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`InfoTrigger <infotrigger/index>`          | Fügt der Visu ein Element hinzu, dass zwei Schaltflächen und eine Wertanzeige für Rückmeldungen vom BUS enthält. Z.B. für Multimediasteuerungen.                                                                                                                                                                                                                            |
+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Multitrigger <multitrigger/index>`        | Fügt der Visu ein Widget mit 4 Schaltflächen hinzu. Damit kann z.B. die Betriebsart der Heizung umgestellt (Komfort -> Nacht -> Abwesend -> Frostschutz) oder ein Szenenabruf realisiert werden.                                                                                                                                                                            |
+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Pagejump <pagejump/index>`                | Mit dem Widget pagejump lassen sich Seiten der Visu zusätzlich verknüpfen. Von der Funktion ist das vergleichbar mit Hyperlinks.                                                                                                                                                                                                                                            |
+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`PushButton <pushbutton/index>`            | Fügt der Visu eine Schaltfläche hinzu, mit der beim Drücken und Loslassen jeweils ein definierter Wert an den BUS gesendet wird. Z.B. beim Drücken eine 1 und beim Loslassen eine 0. Damit ist es z.B. möglich einen Taster zu simulieren um ein Garagentor, Rolläden oder Raffstores zu öffnen und zu schliessen.                                                          |
+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Refresh <refresh/index>`                  | Mit dem Widget refresh lassen sich die angezeigten Daten der Visu neu abrufen.                                                                                                                                                                                                                                                                                              |
+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Reload <reload/index>`                    | Mit dem Widget reload wird die Visu Seite komplett neu geladen.                                                                                                                                                                                                                                                                                                             |
+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Slide <slide/index>`                      | Fügt der Visu einen horizontalen Schieberegler hinzu. Mit diesem kann z.B. gedimmt oder eine Temperatur eingestellt werden.                                                                                                                                                                                                                                                 |
+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Switch <switch/index>`                    | Fügt der Visu eine Schaltfläche hinzu, mit der z.B. Schaltaktionen ausgelöst werden können. Der Switch wird typisch für EIN/AUS Aktionen benutzt, wie Licht, Steckdosen, etc.                                                                                                                                                                                               |
+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Toggle <toggle/index>`                    | Das toggle Widget ist ähnlich wie der Switch, kann aber mehr als zwei Zustände annehmen - dies kann z.B. für die Umschaltung von Betriebsarten der Heizung genutzt werden. Bei jedem Druck nimmt der Toggle den nächsten möglichen Zustand an.                                                                                                                              |
+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Trigger <trigger/index>`                  | Fügt der Visu eine Schaltfläche hinzu, mit der genau ein definierter Wert für einen kurzen, sowie optional ein definierter Wert für einen langen Tastendruck an den BUS gesendet werden kann, z.B. für das Abrufen und Abspeichern von Szenen oder dem Fahren von Rollos. (kurz = stopp, lang = fahren). Die Adresse für Kurz und Langzeit können unterschiedlich sein.     |
+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`URL-trigger <urltrigger/index>`           | Das UrlTrigger Widget fügt der Visualisierung eine Schaltfläche hinzu, die im Hintergrund eine URL aufruft um dadurch Aktionen auszuführen, z.B. um ein IFTTT Rezept aufzurufen.                                                                                                                                                                                            |
+-------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+

.. toctree::
    :titlesonly:
    :hidden:

    audio/index
    designtoggle/index
    imagetrigger/index
    infoaction/index
    infotrigger/index
    multitrigger/index
    pagejump/index
    pushbutton/index
    refresh/index
    reload/index
    slide/index
    switch/index
    toggle/index
    trigger/index
    urltrigger/index

Darstellende Widgets
====================

Diese Widgets haben eine rein informative Funktion, eine Bedienung ist nicht möglich.

+-------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Widget                                          | Beschreibung                                                                                                                                                                                                                                                                                                                                                |
+=================================================+=============================================================================================================================================================================================================================================================================================================================================================+
| :doc:`Image <image/index>`                      | Fügt der Visu ein statisches Bild oder ein Kamerabild hinzu.                                                                                                                                                                                                                                                                                                |
+-------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Info <info/index>`                        | Fügt der Visu ein dynamisches Feld hinzu, dass Werte vom BUS darstellen kann. Z.B. 14-Byte-Text oder Zählerstände.                                                                                                                                                                                                                                          |
+-------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Line <line/index>`                        | Fügt der Visu eine horizontale Linie hinzu, um die Visuseite in einzelne Bereiche zu unterteilen.                                                                                                                                                                                                                                                           |
+-------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`RGB <rgb/index>`                          | Mit dem RGB-Widget kann man eine Farbe in der Visu anzeigen.                                                                                                                                                                                                                                                                                                |
+-------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Text <text/index>`                        | Fügt der Visu ein statisches Textfeld hinzu.                                                                                                                                                                                                                                                                                                                |
+-------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Video <video/index>`                      | Fügt der Visu ein Video oder einen Livestream hinzu. Wird derzeit allerdings von den meisten Quellen noch nicht unterstützt.                                                                                                                                                                                                                                |
+-------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Web <web/index>`                          | Fügt der Visu ein Fläche hinzu, in der externe Webseiten dargestellt werden können.                                                                                                                                                                                                                                                                         |
+-------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`WG_Plugin_Info <wgplugininfo/index>`      | Fügt der Visu ein dynamisches Feld hinzu mit dem Daten aus WireGate Plugins dargestellt werden können.                                                                                                                                                                                                                                                      |
+-------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+

.. toctree::
    :titlesonly:
    :hidden:

    image/index
    info/index
    line/index
    rgb/index
    text/index
    video/index
    web/index
    wgplugininfo/index


Sonstige Widgets
================

+-------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Widget                                          | Beschreibung                                                                                                                                                                                                                                                                                                                                                |
+=================================================+=============================================================================================================================================================================================================================================================================================================================================================+
| :doc:`Break <break/index>`                      | Fügt der Visu einen Zeilenumbruch hinzu.                                                                                                                                                                                                                                                                                                                    |
+-------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Group <group/index>`                      | Mit group können Widgets in einem Rahmen als Gruppe zusammengefasst werden. Die Größe der Gruppe kann über "layout" eingestellt werden.                                                                                                                                                                                                                     |
+-------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Include <include/index>`                  | Ermöglicht es, die visu_config.xml in mehrere Dateien aufzuteilen und die Teile über *include* wieder zusammenzuführen.                                                                                                                                                                                                                                     |
+-------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Navbar <navbar/index>`                    | Mit dem Widget navbar kann der gesamten Visu ein Navigationsmenü hinzu gefügt werden. Das Menü lässt sich an einer Seite (oben, unten, link, rechts) darstellen. Die Navigation durch die Visu lässt sich damit strukturieren.                                                                                                                              |
+-------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| :doc:`Page <page/index>`                        | Erstellt eine neue Visuseite und fügt der aktuellen Seite einen entsprechenden Link hinzu.                                                                                                                                                                                                                                                                  |
+-------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+


.. toctree::
    :titlesonly:
    :hidden:

    break/index
    group/index
    include/index
    navbar/index
    page/index

Widgets die per Plugin eingebunden werden können
================================================

Diese müssen im "meta" Bereich der :doc:`visu_config.xml <../xml-format>` eingebunden werden bevor sie genutzt werden können.

also z.B.:

.. code-block:: xml

    <plugins>
      <plugin name="diagram"/>
      <plugin name="colorchooser"/>
      <plugin name="strftime"/>
    </plugins>

+----------------------------------------------------------+---------------------------------------------------------------------+
| Widget                                                   | Beschreibung                                                        |
+==========================================================+=====================================================================+
| :doc:`ColorChooser <plugins/colorchooser/index>`         | Farb-Auswahl-Rad für RGB-Beleuchtung                                |
+----------------------------------------------------------+---------------------------------------------------------------------+
| :doc:`Diagram <plugins/diagram/index>`                   | RRD-basierte Diagramme                                              |
+----------------------------------------------------------+---------------------------------------------------------------------+
| :doc:`Diagram_Info <plugins/diagramm_info/index>`        | Informations-Anzeige, die beim Klick ein Diagramm öffnet            |
+----------------------------------------------------------+---------------------------------------------------------------------+
| :doc:`PowerSpectrum <plugins/powerspectrum/index>`       | Darstellung des Strom-Spektrums                                     |
+----------------------------------------------------------+---------------------------------------------------------------------+
| :doc:`Strftime <plugins/strftime/index>`                 | Darstellung der Uhrzeit in Textform                                 |
+----------------------------------------------------------+---------------------------------------------------------------------+
| :doc:`RSSlog <plugins/rsslog/index>`                     | RSS                                                                 |
+----------------------------------------------------------+---------------------------------------------------------------------+
| :doc:`RSS <plugins/rss/index>`                           | RSS                                                                 |
+----------------------------------------------------------+---------------------------------------------------------------------+
| :doc:`Gauge <plugins/gauge/index>`                       | Zeigerinstrument                                                    |
+----------------------------------------------------------+---------------------------------------------------------------------+
| :doc:`CalendarList <plugins/calendarlist/index>`         | externen Kalendar einbinden                                         |
+----------------------------------------------------------+---------------------------------------------------------------------+
| :doc:`Clock <plugins/clock/index>`                       | Plugin zum Darstellen der Uhrzeit von einer Adresse.                |
+----------------------------------------------------------+---------------------------------------------------------------------+
| :doc:`SVG <plugins/svg/index>`                           | Demo Plugin zur Anzeige einer interaktiv animierten SVG Datei       |
+----------------------------------------------------------+---------------------------------------------------------------------+
| :doc:`Timeout <plugins/timeout/index>`                   | Wechselt nach gewisser Zeit der Inaktivität auf eine andere Seite   |
+----------------------------------------------------------+---------------------------------------------------------------------+
| :doc:`UPNPController <plugins/upnpcontroller/index>`     | UPNP-Controller                                                     |
+----------------------------------------------------------+---------------------------------------------------------------------+
| :doc:`Speech <plugins/speech/index>`                     | Sprachausgabe (Text-to-speech)                                      |
+----------------------------------------------------------+---------------------------------------------------------------------+

.. toctree::
    :titlesonly:
    :hidden:
    :glob:

    plugins/*/index

weitere Plugins befinden sich in der Entwicklung.
